# scrappy_google_sheet

./: README.md  credentials.json  googlesheet.py  indeed.py  jobs.csv  main.py  pyproject.toml  save.py
